# icub-main

./: CMakeLists.txt
src/idl/thrift/: CMakeLists.txt
src/libraries/: CMakeLists.txt
src/libraries/icubmod/: CMakeLists.txt  PluginPath.cmake.in
src/libraries/icubmod/analogServer/: CMakeLists.txt  analogServer.ini
src/libraries/icubmod/armcalibrator/: CMakeLists.txt  armCalibrator.ini
src/libraries/icubmod/canBusAnalogSensor/: CMakeLists.txt  canBusAnalogSensor.ini
src/libraries/icubmod/canBusInertialMTB/: CMakeLists.txt  canBusInertialMTB.ini
src/libraries/icubmod/canBusMotionControl/: CMakeLists.txt
src/libraries/icubmod/canBusSkin/: CMakeLists.txt  canBusSkin.ini
src/libraries/icubmod/canBusVirtualAnalogSensor/: CMakeLists.txt  canBusVirtualAnalogSensor.ini
src/libraries/icubmod/cartesianController/: CMakeLists.txt  cartesiancontrollerclient.ini  cartesiancontrollerserver.ini
src/libraries/icubmod/cfw2Can/: CMakeLists.txt  cfw2can.ini
src/libraries/icubmod/coman/: CMakeLists.txt  comanFTsensor.ini  comanMotionControl.ini
src/libraries/icubmod/controlBoardWrapper2/: CMakeLists.txt  canBusMotionControl.ini  controlboardwrapper2.ini
src/libraries/icubmod/debugInterfaceClient/: CMakeLists.txt  debugInterfaceClient.ini
src/libraries/icubmod/debugStream/: CMakeLists.txt  debugStream.ini
src/libraries/icubmod/dragonfly2/: CMakeLists.txt  dragonfly2.ini
src/libraries/icubmod/legscalibrator/: CMakeLists.txt  legscalibrator.ini
src/modules/: CMakeLists.txt
src/modules/iSpeak/: main.cpp
src/modules/velocityControl/: main.cpp
(+58 files in other folders)
